test/patterns/negative/tuple2.mli.expected

*******************************
********** Parsed file ********
*******************************
type tc = (char * int)
[@@@gospel
  {| function f (a : tc) : bool =
      match a with
      | '\000'..'b', 0i -> true
      | 'b'..'\255', x -> false
|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type tc = (char * int)
  

(*@ function f ... *)
File "tuple2.mli", line 3, characters 6-82:
Error: This pattern-matching is not exhaustive.
       Here is an example of a case that is not matched:
         '\000', 1i.
